--- a/template/bootstrap3/shop-order-finalizing-breadcrumb.html
+++ b/template/bootstrap3/shop-order-finalizing-breadcrumb.html
@@ -3,14 +3,14 @@
         <div class="row">
             <ol class="breadcrumb" ng-if="viewport.xs">
                 <li>
-                    <a ng-href="#!{{::localePrefix}}/order-history" i18n code="shop.order.history.title" read-only>
+                    <a bin-href="/order-history" i18n code="shop.order.history.title" read-only>
                         <i class="fa fa-angle-left fa-fw"></i> {{::var}}
                     </a>
                 </li>
             </ol>
             <ol class="breadcrumb" ng-if="!viewport.xs">
                 <li>
-                    <a ng-href="#!{{::localePrefix}}/order-history" i18n code="shop.order.history.title" read-only>
+                    <a bin-href="/order-history" i18n code="shop.order.history.title" read-only>
                         {{::var}}
                     </a>
                 </li>
