--- a/template/bootstrap3/shop-payment-provider-permission-approved-breadcrumb.html
+++ b/template/bootstrap3/shop-payment-provider-permission-approved-breadcrumb.html
@@ -3,14 +3,14 @@
         <div class="row">
             <ol class="breadcrumb" ng-if="viewport.xs">
                 <li>
-                    <a ng-href="#!{{::localePrefix}}/site-settings" i18n code="clerk.menu.site.settings.link" read-only>
+                    <a bin-href="/site-settings" i18n code="clerk.menu.site.settings.link" read-only>
                         <i class="fa fa-angle-left fa-fw"></i> {{::var}}
                     </a>
                 </li>
             </ol>
             <ol class="breadcrumb" ng-if="!viewport.xs">
                 <li>
-                    <a ng-href="#!{{::localePrefix}}/site-settings" i18n code="clerk.menu.site.settings.link" read-only>
+                    <a bin-href="/site-settings" i18n code="clerk.menu.site.settings.link" read-only>
                         {{::var}}
                     </a>
                 </li>
