--- a/template/bootstrap3/shop-summary.html
+++ b/template/bootstrap3/shop-summary.html
@@ -136,7 +136,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
                 <hr>
-                <a ng-href="#!{{localePrefix}}/checkout/address" class="btn btn-default"
+                <a bin-href="/checkout/address" class="btn btn-default"
                    i18n code="shop.back.button" read-only>
                     <i class="fa fa-caret-left fa-fw"></i> {{::var}}
                 </a>
