--- a/template/bootstrap3/shop-account.html
+++ b/template/bootstrap3/shop-account.html
@@ -16,12 +16,14 @@
                             <div class="form-group">
                                 <label i18n code="checkpoint.password.label" read-only ng-bind="::var"></label>
                                 <div>
-                                    <a bin-href="/changemypassword" i18n code="checkpoint.change.password.title" read-only>{{::var}}</a>
+                                    <a bin-href="/changemypassword" i18n code="checkpoint.change.password.title"
+                                       read-only>{{::var}}</a>
                                 </div>
                                 <hr>
                             </div>
                             <div class="form-group" ng-class="{'has-error': violations.vat}">
-                                <label for="vat" i18n code="customer.profile.vat.label" read-only ng-bind="::var"></label>
+                                <label for="vat" i18n code="customer.profile.vat.label" read-only
+                                       ng-bind="::var"></label>
                                 <input id="vat" class="form-control" ng-model="vat">
                                 <p class="help-block" i18n code="customer.profile.vat.info" read-only>
                                     <small><i class="fa fa-info-circle fa-fw"></i> {{::var}}</small>
@@ -31,7 +33,8 @@
                                     {{::var}}
                                 </p>
                             </div>
-                            <button type="submit" class="btn btn-success" ng-disabled="working || customerProfileForm.$pristine">
+                            <button type="submit" class="btn btn-success"
+                                    ng-disabled="working || customerProfileForm.$pristine">
                                 <span ng-show="working"><i class="fa fa-spinner fa-spin fa-fw"></i></span>
                                 <span ng-hide="working"><i class="fa fa-check fa-fw"></i></span>
                                 <span class="inline" i18n code="shop.save.button" read-only>{{::var}}</span>
@@ -58,14 +61,16 @@
                                     <i class="fa fa-plus fa-fw"></i> {{::var}}
                                 </a>
                             </div>
-                            <div ng-if="addresses.length > 0" ng-init="addressForm.selectedAddressLabel = addresses[0].label">
+                            <div ng-if="addresses.length > 0"
+                                 ng-init="addressForm.selectedAddressLabel = addresses[0].label">
                                 <div class="form-group" ng-if="addresses.length > 1">
                                     <select class="form-control" ng-model="addressForm.selectedAddressLabel"
                                             ng-options="a.label as a.label for a in addresses">
                                     </select>
                                     <hr>
                                 </div>
-                                <div class="form-group" ng-repeat="address in addresses | filter:{label:addressForm.selectedAddressLabel}:true">
+                                <div class="form-group"
+                                     ng-repeat="address in addresses | filter:{label:addressForm.selectedAddressLabel}:true">
 
                                     <div class="btn-group-vertical pull-right">
                                         <button type="button" class="btn btn-danger btn-sm"
@@ -91,6 +96,14 @@
                         </form>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <hr>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-lg-12">
+                <bin-delete-user-profile></bin-delete-user-profile>
             </div>
         </div>
     </div>
